tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier4EV-AAAAAAAAAAAAAAAAAAAABg==__EVSuperconductor-AAAAAAAAAAAAAAAAAAAFgA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1408,
  "optional_prerequisites": [
    1415,
    1243,
    861
  ],
  "prerequisites": [],
  "properties": {
    "auto_claim": false,
    "desc": "How about lossless 2048 EU Wires? Uraniumtriplatinide is a superconductor wire and will transfer your energy without any loss.\n\nYou'll need TPV Coils.\n\n[note]Whether these are worth it to save a little power or not is up to you of course.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§a§lEV Superconductors (2048 EU/t)",
    "party_single_reward": false,
    "quest_logic": "OR",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "rewards": [],
  "tasks": []
}
