tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier4EV-AAAAAAAAAAAAAAAAAAAABg==__EXTREMEMIXING-kQL8JceoSMSLDU_2AFjoqw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 14386829016291666091,
  "prerequisites": [
    176
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Well, maybe it's not as extreme as the quest name suggests, but it gets the job done.\n\nYou'll need one anyway so why not make one now and save some time on the mixing?",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§a§lEXTREME MIXING",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    176
  ],
  "rewards": [],
  "tasks": []
}
