tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier4EV-AAAAAAAAAAAAAAAAAAAABg==__EmptyEpoxidBoard-AAAAAAAAAAAAAAAAAAAE0g==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1234,
  "prerequisites": [
    1224
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Epoxid circuit boards require an epoxid plate, gold foil and sulfuric acid to make an empty board. By adding electrum foil and Iron(III) Chloride or Sodium Persulfate you can craft an Advanced Circuit Board.\n\n[note]If you used IC2 Scrap Boxes to obtain the empty boards instead of using epoxy, hold 64 Advanced Circuit Boards in your hand to unlock this quest.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§a§lEmpty Epoxid Board",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1224
  ],
  "rewards": [],
  "tasks": []
}
