tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier4EV-AAAAAAAAAAAAAAAAAAAABg==__EmptyFiberReinfo-AAAAAAAAAAAAAAAAAAAGjQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1677,
  "prerequisites": [
    1676
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Fiber Reinforced circuit boards require fiber-reinforced epoxid resin sheets, aluminium foil, and sulfuric acid to make an empty board. By adding energetic alloy foil and Iron(III) Chloride or Sodium Persulfate you can craft a More Advanced Circuit Board.\n\n[note]With these new boards you can make Lapotronic Energy Orbs. You could use them to upgrade your LSC. The boards are also used in IV for the next circuit line.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§a§lEmpty Fiber Reinforced Glass Board",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1676
  ],
  "rewards": [],
  "tasks": []
}
