tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier4EV-AAAAAAAAAAAAAAAAAAAABg==__Epichlorohydrin-AAAAAAAAAAAAAAAAAAAEzA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1228,
  "optional_prerequisites": [
    176,
    859
  ],
  "prerequisites": [],
  "properties": {
    "auto_claim": false,
    "desc": "Epichlorohydrin is another product needed in your epoxid production. By now you should be experienced enough to figure out which path is best for your setup using NEI.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§a§lEpichlorohydrin",
    "party_single_reward": false,
    "quest_logic": "OR",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "rewards": [],
  "tasks": []
}
