tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier4EV-AAAAAAAAAAAAAAAAAAAABg==__Epoxid-AAAAAAAAAAAAAAAAAAAEyA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1224,
  "prerequisites": [
    1228,
    1230
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Epoxid is needed for Advanced Circuits boards. You need Sodium Hydroxide, Epichlorohydrin and Bisphenol A to make it.\n\nYou can also use the molten form for some other things you might want to check out.\n\n[note]Using a Large Chemical Reactor? You might be able to skip some steps, look around NEI to find out more.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§a§lEpoxid",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1228,
    1230
  ],
  "rewards": [],
  "tasks": []
}
