tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier4EV-AAAAAAAAAAAAAAAAAAAABg==__Graphene-AAAAAAAAAAAAAAAAAAABig==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 394,
  "prerequisites": [
    459,
    1406
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Graphene is a material that is just one atom layer thick. It has very favorable electric properties. To create though you will have to make some Graphene you can use a powerful adhesive to pull a single layer of material away from Graphite.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§a§lGraphene",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    459,
    1406
  ],
  "rewards": [],
  "tasks": []
}
